# NetPathMiner

./: .BBSoptions  .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  Dockerfile  NAMESPACE  NEWS  README.md  authors.html  cleanup  cleanup.win  configure  configure.ac  configure.win  index.html  pkgdown.yml  sitemap.xml
R/: NPM-package.R  dbExtract.R  netProcess.R  netWeight.R  pathClassifier.R  pathCluster.R  pathRank.R  plotPath.R
articles/: NPMVignette.html  index.html
data/: ex_biopax.rda  ex_kgml_sig.rda  ex_microarray.rda  ex_sbml.rda
data-raw/: ex_kgml_sig.R  hsa04014.xml  hsa04062.xml
inst/: CITATION
man/: KGML2igraph.Rd  MIRIAM.Rd  NPMdefaults.Rd  NetPathMiner-package.Rd  SBML2igraph.Rd  assignEdgeWeights.Rd  biopax2igraph.Rd  colorVertexByAttr.Rd  ex_biopax.Rd  ex_kgml_sig.Rd  ex_microarray.Rd  ex_sbml.Rd  extractPathNetwork.Rd  getAttr.Rd  getGeneSetNetworks.Rd  getGeneSets.Rd  getPathsAsEIDs.Rd  layoutVertexByAttr.Rd  makeGeneNetwork.Rd  makeMetaboliteNetwork.Rd  makeReactionNetwork.Rd  pathClassifier.Rd  pathCluster.Rd  pathRanker.Rd  pathsToBinary.Rd  plotAllNetworks.Rd  plotClassifierROC.Rd  plotClusters.Rd  plotCytoscape.Rd  plotNetwork.Rd  plotPathClassifier.Rd  plotPathCluster.Rd  plotPaths.Rd  predictPathClassifier.Rd  predictPathCluster.Rd  registerMemoryErr.Rd  reindexNetwork.Rd  rmSmallCompounds.Rd  samplePaths.Rd  simplifyReactionNetwork.Rd  (+2 more)
reference/: KGML2igraph.html  MIRIAM.html  NPMdefaults.html  NetPathMiner-package.html  SBML2igraph.html  assignEdgeWeights.html  biopax2igraph.html  colorVertexByAttr.html  ex_biopax.html  ex_kgml_sig.html  ex_microarray.html  ex_sbml.html  example.gml  extractPathNetwork.html  getAttr.html  getGeneSetNetworks.html  getGeneSets.html  getPathsAsEIDs.html  index.html  kgml.gmt  layoutVertexByAttr.html  makeGeneNetwork.html  makeMetaboliteNetwork.html  makeReactionNetwork.html  pathClassifier.html  pathCluster.html  pathRanker.html  pathsToBinary.html  plotAllNetworks.html  plotClassifierROC.html  plotClusters.html  plotCytoscape.html  plotNetwork.html  plotPathClassifier.html  plotPathCluster.html  plotPaths.html  predictPathClassifier.html  predictPathCluster.html  registerMemoryErr.html  reindexNetwork.html  (+5 more)
src/: Makevars.in  Makevars.win  PathRanker.cpp  handlesegfault.c  handlesegfault.cwin  handlesegfault.h  hme3m.c  hme3m.h  init.c  init.h  kgml_interface.cpp  methods.cpp  pathScope.cpp  sbml_interface.cpp  sbml_interface.h
vignettes/: NPMVignette.Rmd  NPMVignette.Rnw  example.R
(+5 files in other folders)
